--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Neil Moore's page
 email: neil@cfconline.co.uk
 description: > # this means to ignore newlines until "baseurl:"
-  Insane ramblings of a lunatic.
+  Programming and stuff.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.bigoh.co.uk" # the base hostname & protocol for your site
 twitter_username: neilmoore67
